--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -4,8 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Go castings</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../assest/img/go-casting-picture.jpg" type="image/x-icon">
 </head>
 <body>
-  <h4>Hola go castings</h4>
+  <div class="nav">
+    <img src="../assest/img/nombre-logo.png" alt="logo">
+    <div class="menu d-none d-md-block">
+      <ol>
+        <li>MUJERES</li>
+        <li>HOMBRES</li>
+        <li>COMO FUNCIONA</li>
+        <li>SOBRE NOSOTROS</li>
+        <li>BLOG</li>
+      </ol>
+    </div>
+    <div class="acceso"><span>ACCESO</span><i class="bi bi-arrow-down"></i></div>
+  </div>
+  <div class="intro">
+    <h4>Reserva tu talento de forma facil</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quas animi eius architecto doloribus quod officiis saepe, iusto soluta quaerat nostrum placeat rem, eveniet commodi nesciunt totam nihil! Nemo, vel!</p>
+    <div class="botones row">
+      <button class="btn-primary col">UNETE COMO CLIENTE</button>
+    <button class="btn-primary col">UNETE COMO MODELO</button>
+    </div>
+  </div>
+  <div class="message">
+    <button class="btn-icon">
+      <i class="bi bi-chat-right-dots-fill"></i>
+    </button>
+  </div>
+  <div class="modelo-con-gafas d-none d-sm-block"></div>
+  <div class="modelo-asiatica"></div>
+  <div class="modelo-rubia d-none d-sm-block"></div>
+  <div class="modelo-masculino d-none d-sm-block"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
